--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "node-todo-api",
   "main": "app.js",
   "scripts": {
+    "start": "node server/server.js",
     "test": "mocha server/**/*.test.js"
+  },
+  "engines": {
+    "node": "8.4.0"
   },
   "author": {
     "name": "frank"
