--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node server/server.js",
-    "test": "mocha server/**/*.test.js"
+    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha server/**/*.test.js"
   },
   "engines": {
     "node": "8.4.0"
@@ -17,12 +17,14 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.15.5",
+    "lodash": "4.17.4",
     "mongodb": "^2.2.31",
     "mongoose": "^4.11.13"
   },
   "devDependencies": {
     "expect": "^21.2.0",
     "mocha": "^3.5.3",
-    "nodemon": "^1.12.1"
+    "nodemon": "^1.12.1",
+    "supertest": "^3.0.0"
   }
 }
