--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
   },
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "express": "^4.15.5",
+    "jsonwebtoken": "^8.0.1",
     "lodash": "4.17.4",
     "mongodb": "^2.2.31",
-    "mongoose": "^4.11.13"
+    "mongoose": "^4.11.13",
+    "validator": "^9.0.0"
   },
   "devDependencies": {
     "expect": "^21.2.0",
